updates to user guide and pipeline; adding new pipeline for standard star reduction

--- a/userguide/gemini_dr_user_guide.tex
+++ b/userguide/gemini_dr_user_guide.tex
@@ -234,6 +234,25 @@ This step is twofold: first we must find the wavelength solution for each arc la
 
 \subsection{Find the Wavelenth Calibration}
 
+\begin{verbatim}
+          Image Data    Found          Fit   Pix Shift    User Shift Z Shift      RMS
+ergS20151108S0106_001 - Ap 440 10/10   10/10   -0.00557     0.00522  1.82E-6   0.0749
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 441 10/10   10/10    -0.0793       0.081  1.36E-5   0.0731
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 442 10/10   10/10    -0.0694      0.0711  1.12E-5    0.034
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 443 10/10   10/10   -0.00833     0.00873  9.11E-7   0.0476
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 444 10/10   10/10     0.0222     -0.0225  -4.0E-6     0.07
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 445 10/10   10/10     0.0256     -0.0259  -4.7E-6   0.0896
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): 
+ergS20151108S0106_001 - Ap 446 10/10   10/10      0.084     -0.0855  -1.4E-5    0.126
+Fit dispersion function interactively? (no|yes|NO|YES) ('no'): yes
+
+
+\end{verbatim}
 
 \subsection{Apply the Calibration to the Arcs}
 
